[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zer0lint"
version = "0.0.3"
description = "AI memory extraction diagnostics — works with mem0 or any HTTP memory endpoint"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
mem0 = ["mem0ai>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
zer0lint = "zer0lint.cli:app"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
